# data-manager

./: .gitignore  Cargo.toml  README.md
data/05b7e1353a309b2d89481f0c18eefe4cd79626154cd00fe93cd882cc2aba4d3a/: metadata
data/10331c9350e0e86f48796ef2eeed44deb8c52f5a577ef3ce4e5135a72b2d7065/: metadata
data/312956b34351880bd6f0f8ae4baf26912bba247e031fae3682507f5d86e1a048/: metadata
data/7eb4eb0ccd29f506b70f125c54a448db496a5920f88f64c83075651777a8faf3/: metadata
src/: lib.rs  main.rs
